--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,8 @@ exoplayer = "2.18.4"
 room = "2.2.6"
 retrofit = "2.9.0"
 interceptor = "4.11.0"
+legacySupportV4 = "1.0.0"
+fragmentKtx = "1.8.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -38,6 +40,8 @@ androidx-room-runtime = { group = "androidx.room", name = "room-runtime", versio
 retrofit2 = {group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit"}
 retrofit2-converter = {group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit"}
 http3 = {group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "interceptor"}
+androidx-legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
+androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
